--- a/src/components/datascreen-setting-panel/datascreen-setting-panel.scss
+++ b/src/components/datascreen-setting-panel/datascreen-setting-panel.scss
@@ -44,7 +44,7 @@ datascreen-setting-panel {
         }
 
         ion-grid+ion-grid {
-            border-top: 1px solid var(--ion-background-contrast);
+            margin-top: 8px;
         }
 
         ion-grid {
