--- a/src/components/datascreen-canvas-content/datascreen-canvas-content.scss
+++ b/src/components/datascreen-canvas-content/datascreen-canvas-content.scss
@@ -1,9 +1,7 @@
 datascreen-canvas-content {
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
+    display: block;
     overflow: scroll;
-    contain: content;
     position: relative;
 }
