--- a/src/components/cy-table/cy-table.scss
+++ b/src/components/cy-table/cy-table.scss
@@ -1,28 +1,31 @@
-:host{
-    --background:#ffffff;
+:host {
+    --background: transparent;
+    --header-bg: var(--background, #fafafa);
     --color: #000000;
-    --header-bg: #fafafa;
-    --border-width: 2px;
+    --border-width: 0px;
     --border-color: #edf2f6;
+    --font-size: 16px;
     width: 100%;
 }
-table{
+
+table {
     width: 100%;
     height: 100%;
     color: var(--color);
-    background: var( --background)
+    font-size: var(--font-size);
+    background: var(--background)
 }
 
-thead{
+thead {
     background: var(--header-bg)
 }
 
-td, th{    
+td,
+th {
     border-width: 0 var(--border-width) var(--border-width) 0;
     border-collapse: collapse;
     border-color: var(--border-color);
     border-style: solid;
     line-height: 1.5;
-    padding: 1em;
-    text-align: left;
+    padding: 0.5em 0;
 }
