--- a/src/components/setting-data-config/setting-data-config.scss
+++ b/src/components/setting-data-config/setting-data-config.scss
@@ -1,3 +1,15 @@
 setting-data-config{
+    ion-item,ion-col{
+        ion-radio-group{
+            display: flex;
+            margin-top: 30px;
+        }
+        ion-textarea {
+            --background: var(--ion-background-shade) !important;
+        }
+        ion-input{
+            --background: var(--ion-background-shade) !important;
+        }
+    }
     
 }
