--- a/src/global/theme.css
+++ b/src/global/theme.css
@@ -55,7 +55,7 @@
     --ion-toolbar-background: #1C1c1c;
     --ion-background-color: #282830;
     --ion-background-contrast: #ffffff;
-    --ion-background-shade: #5e5e5e;
+    --ion-background-shade: #3f3f3f;
 
     --ion-color-primary: #3880ff;
     --ion-color-primary-rgb: 56, 128, 255;
