先留一个bug ,数据映射,echart属性相关设计

--- a/src/components/cy-table/cy-table.scss
+++ b/src/components/cy-table/cy-table.scss
@@ -4,7 +4,7 @@
     --color: #000000;
     --border-width: 0px;
     --border-color: #edf2f6;
-    --font-size: 16px;
+    --font-size: inherit;
     width: 100%;
 }
 
