--- a/src/components/datascreen-setting-panel/datascreen-setting-panel.scss
+++ b/src/components/datascreen-setting-panel/datascreen-setting-panel.scss
@@ -32,15 +32,12 @@ datascreen-setting-panel {
         margin: 2px 0;
         --background: var(--ion-background-shade)
     }
-    
-   
 
     ion-content {
         width: 332px;
-        --padding-start: 10px;
-        --padding-end: 8px;
-
-      
+        font-size: 14px;
+        --padding-start: 0px;
+        --padding-end: 0px;
 
         ion-title {
             font-size: var(--font-size);
@@ -49,8 +46,14 @@ datascreen-setting-panel {
         .marginTop, ion-grid {
             margin-top: 15px;
         } 
-
+        cy-item-extend{
+            cy-item-extend{
+                --header-bg: #111417;
+                --color: #737c80;
+            }
+        }
         ion-grid {
+            padding: 5px 0;
             ion-col {
                 display: flex;
                 align-items: center;
@@ -67,6 +70,7 @@ datascreen-setting-panel {
                 }
 
                 ion-input {
+                    height: 32px;
                     --background: var(--ion-background-shade) !important;
                 }
                
