--- a/src/components/app-create/app-create.scss
+++ b/src/components/app-create/app-create.scss
@@ -1,9 +1,10 @@
 app-create {
 
-    .canvas-content {
-        width: 100%;
-        height: 100%;
-        padding: 10px 20px;
+    .right-content{
+        --padding-top: 10px;
+        --padding-bottom: 10px;
+        --padding-start: 10px;
+        --padding-end: 10px;
     }
 
     .fit-box {
