--- a/src/components/app-home/app-home.scss
+++ b/src/components/app-home/app-home.scss
@@ -1,10 +1,14 @@
 app-home {
     .datascreen-box{
+        width: 100%;
+        flex: 1;
+        overflow: hidden;
         display: flex;
         flex-direction: row;
         height: 100%;
         background: url(../../assets/image/dian.png) repeat;
         border-top: 3px solid var(--ion-background-shade);
+        color: var(--ion-text-color)
     }
 
 }
