--- a/src/components/cy-table/cy-table.scss
+++ b/src/components/cy-table/cy-table.scss
@@ -2,59 +2,61 @@
     --header-bg: transparent;
     --odd-bg: transparent;
     --even-bg: transparent;
+
     --color: #000000;
+    --font-size: inherit;
     width: 100%;
-    height: 100%;
 }
 
 .table{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.table-body{
+    flex: 1;
+}
+.table-header ,.table-body{
+    overflow: hidden;
+}
+
+table {
     width: 100%;
     height: 100%;
     color: var(--color);
     font-size: var(--font-size);
-    overflow: hidden;
-    position: relative;
+    table-layout: fixed;
+    border-spacing: 0;
 }
 
-.cy-row {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    vertical-align: middle;
-    align-items: center;
-    will-change: transform;
-    transition: transform 1s
-}
-
-.cy-col {
-    flex: auto;
-    overflow: hidden;
-    display: inline-block;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-}
-
-.table-header {
-    overflow: hidden;
-    z-index: 2;
-    position: relative;
-    .cy-row {
-        background: var(--header-bg) !important;
+thead {
+    tr{
+        background: var(--header-bg)!important;
+        z-index: 2;
     }
 }
 
-.table-body{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+tbody{
     overflow: hidden;
-    position: relative;
-    .cy-row:nth-child(odd) {
+
+    transition: transform 1s;
+    tr{
+        z-index: 1;
+    }
+
+    tr:nth-child(odd) {
         background-color: var(--odd-bg)
     }
     
-    .cy-row:nth-child(even) {
+    tr:nth-child(even) {
         background-color: var(--even-bg)
     }
+}
+
+td,
+th {
+    line-height: 1.5;
+    padding: 0.5em 0;
 }
