content添加padding自适应属性

--- a/src/components/datascreen-canvas-content/datascreen-canvas-content.scss
+++ b/src/components/datascreen-canvas-content/datascreen-canvas-content.scss
@@ -2,6 +2,7 @@ datascreen-canvas-content {
     width: 100%;
     height: 100%;
     display: block;
-    overflow: scroll;
+    overflow: auto;
     position: relative;
+    box-sizing: border-box;
 }
