--- a/src/components/datascreen-edit-main/datascreen-edit-main.scss
+++ b/src/components/datascreen-edit-main/datascreen-edit-main.scss
@@ -6,16 +6,11 @@ datascreen-edit-main{
     overflow: hidden;
 
     .canvas-box{
-        flex: 1;
         width: 100%;
+        height: 100%;
         overflow: hidden;
     }
-
-    datascreen-canvas-content{
-        display: flex;
-        align-items: center;
-    }
-
+   
     .datascreen-edit-footer {
         height: 40px;
         margin-right: 0px;
