新添饼图相关

--- a/src/components/datascreen-com-panel/datascreen-com-panel.scss
+++ b/src/components/datascreen-com-panel/datascreen-com-panel.scss
@@ -68,10 +68,10 @@ datascreen-com-panel {
                 background-size: 70% 70%;
                 background-position: center;
                 background-repeat: no-repeat;
-                background-color: var(--ion-color-secondary);
+                // background-color: var(--ion-color-secondary);
                 height: 60px;
                 border-radius: 6px;
-                filter:drop-shadow(0 0 var(--ion-color-primary));
+                // filter:drop-shadow(0 0 var(--ion-color-primary));
                 border-width: 1px;
                 border-style: solid;
                 border-color: transparent;
