--- a/src/components/datascreen-layer/datascreen-layer.scss
+++ b/src/components/datascreen-layer/datascreen-layer.scss
@@ -16,6 +16,10 @@ datascreen-layer{
             ion-thumbnail{
                 width: 35px;
                 height: 35px;
+                cy-iconfont{
+                    width: 100%;
+                    height: 100%;
+                }
             }
         }
     }
