--- a/src/components/datascreen-canvas/datascreen-canvas.css
+++ b/src/components/datascreen-canvas/datascreen-canvas.css
@@ -9,7 +9,7 @@ datascreen-canvas .drag_container {
     width: 100%;
     height: 100%;
     transform-origin: 0 0;
-    transition: .5s all ease-in-out;
+    transition: .5s all ease-in;
     background-size: cover,contain;
     background-position: center,right bottom;
     background-repeat: no-repeat,no-repeat;
