--- a/src/components/datascreen-layer-panel/datascreen-layer-panel.scss
+++ b/src/components/datascreen-layer-panel/datascreen-layer-panel.scss
@@ -1,11 +1,11 @@
-datascreen-layer{
-    width:200px;
+datascreen-layer-panel {
+    width: 200px;
     overflow: hidden;
     position: relative;
     transition: width .25s ease-in-out;
     font-size: calc(0.8 * var(--font-size));
 
-    ion-header{
+    ion-header {
         width: 200px;
     }
 
@@ -13,13 +13,17 @@ datascreen-layer{
         width: 200px;
 
         ion-item {
-            ion-thumbnail{
+            ion-thumbnail {
                 width: 35px;
                 height: 35px;
-                cy-iconfont{
+
+                cy-iconfont {
                     width: 100%;
                     height: 100%;
                 }
+            }
+            ion-reorder {
+                margin-inline-start: 10px
             }
         }
     }
@@ -27,7 +31,8 @@ datascreen-layer{
     ion-toolbar {
         --min-height: 35px;
     }
-    ion-title{
+
+    ion-title {
         font-size: calc(0.8 * var(--font-size));
     }
 }
